[package]
name = "esoteric"
version = "0.1.0"
edition = "2018"

[lib]
name = "esoteric_back"
path = "src/lib.rs"

[[bin]]
name = "esoteric_auth"
path = "src/bin/auth.rs"

[[bin]]
name = "esoteric_text"
path = "src/bin/text.rs"

[[bin]]
name = "esoteric_sync"
path = "src/bin/sync.rs"

[[bin]]
name = "esoteric_enss"
path = "src/bin/enss.rs"

[dependencies]
argon2 = "0.5.1" 
axum = { version = "0.6.19", features = ["headers", "macros"] }
jsonwebtoken = "8.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = "1.0.178"
serde_json = "1.0"
sqlx = { version = "0.7.1", features = ["sqlite", "macros", "chrono", "runtime-tokio"] }
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
